Closed Bug 630036 Opened 12 years ago Closed 12 years ago

Throw NOT_SUPPORTED_ERR instead of SYNTAX_ERR when calling cx.create{Linear|Radial}Gradient with non-finite values

Categories

(Core :: Graphics: Canvas2D, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla2.0b11

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

()

Details

(Keywords: dev-doc-complete, html5)

Attachments

(1 file, 2 obsolete files)

Keywords: checkin-needed
Attached patch Patch for checkin (obsolete) — Splinter Review
Thanks!
Attachment #508250 - Attachment is obsolete: true
Hopefully this applies to trunk.
Attachment #508707 - Attachment is obsolete: true
http://hg.mozilla.org/mozilla-central/rev/c41670743f35
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b11
Added note to:

https://developer.mozilla.org/en/DOM/CanvasRenderingContext2D#Notes

And listed the change on Firefox 4 for developers.
You need to log in before you can comment on or make changes to this bug.