Bug 630036 - Throw NOT_SUPPORTED_ERR instead of SYNTAX_ERR when calling cx.create{Linear|Radial}Gradient with non-finite values; r+a=roc